# pylogshield

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  zensical.toml
.github/workflows/: ci.yml  release.yml
.superpowers/brainstorm/1860-1778305533/content/: approach.html  features.html  full-design.html  layout.html
.superpowers/brainstorm/1860-1778305533/state/: server-stopped
docs/: cli_usage.md  index.md  installation.md  recipes.md  requirements.txt  usage.md
docs/css/: extra.css
docs/includes/: abbreviations.md
docs/js/: extra.js
docs/overrides/: main.html
docs/plans/: 2026-05-09-interactive-tui-viewer.md
docs/references/: config.md  context.md  decorators.md  filters.md  handlers.md  logger.md  metrics.md  middleware.md  tui.md  utils.md  viewer.md
docs/screenshots/: gallery.html
docs/specs/: 2026-05-09-interactive-tui-viewer-design.md
src/pylogshield/: __init__.py  __main__.py  _version.py  cli.py  config.py  context.py  core.py  decorators.py  filters.py  handlers.py  limiter.py  metrics.py  middleware.py  utils.py  viewer.py
src/pylogshield/tui/: app.py  exporter.py  reader.py  widgets.py
tests/: __init__.py  conftest.py  requirements.txt  test_cli.py  test_config.py  test_context.py  test_core.py  test_decorators.py  test_filters.py  test_handlers.py  test_limiter.py  test_metrics.py  test_middleware.py  test_tui_reader.py  test_utils.py  test_viewer.py
